crates/embedded-bitmap-font/tests/ui/drawable_text_mismatched_cell_heights_fail.stderr
error[E0080]: evaluation panicked: CellSizes ascii and cjk heights must match
  --> tests/ui/drawable_text_mismatched_cell_heights_fail.rs:11:51
   |
11 |   const _TEXT: DrawableText<'static, BinaryColor> = DrawableText::new(
   |  ___________________________________________________^
12 | |     &FONT,
13 | |     "",
14 | |     Point::new(0, 0),
...  |
17 | |     BinaryColor::On,
18 | | );
   | |_^ evaluation of `_TEXT` failed inside this call
   |
note: inside `DrawableText::<'_, BinaryColor>::new`
  --> src/text.rs
   |
   |             CellSizes::new(ascii_cell_size, cjk_cell_size),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `CellSizes::new`
  --> src/text.rs
   |
   | /         assert!(
   | |             ascii.height == cjk.height,
   | |             "CellSizes ascii and cjk heights must match"
   | |         );
   | |_________^ the failure occurred here
